made i3 more vimlike and added neovim config

--- a/home/.config/i3/config
+++ b/home/.config/i3/config
@@ -31,7 +31,8 @@ font pango:DejaVu Sans Mono 10
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+#bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec termite
 
 # kill focused window (vim delete, follows vimperator settings more than vim)
 bindsym $mod+d kill
