--- a/home/.config/i3/config
+++ b/home/.config/i3/config
@@ -12,12 +12,12 @@
 set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
-# is used in the bar {} block below.
+
 #font pango:monospace 8
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
-font pango:DejaVu Sans Mono 10
+font pango:DejaVu Sans Mono 16
 
 # Before i3 v4.8, we used to recommend this one as the default:
 # font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
@@ -34,7 +34,7 @@ floating_modifier $mod
 bindsym $mod+Return exec termite
 
 # kill focused window (vim delete, follows vimperator settings more than vim)
-bindsym $mod+d kill
+bindsym $mod+q kill
 
 # start dmenu (a program launcher)
 # bindsym $mod+semicolon exec dmenu_run
@@ -104,7 +104,7 @@ bindsym $mod+space focus mode_toggle
 bindsym $mod+a focus parent
 
 # focus the child container
-#bindsym $mod+d focus child
+bindsym $mod+d focus child
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
@@ -190,3 +190,6 @@ bindsym XF86AudioMute           exec pamixer --toggle-mute
 bindsym XF86AudioLowerVolume    exec pamixer --decrease 5
 bindsym XF86AudioRaiseVolume    exec pamixer --increase 5
 #}
+
+# Startup
+exec --no-startup-id i3-msg 'workspace 1; exec /usr/bin/firefox'
