--- a/home/.ssh/config
+++ b/home/.ssh/config
@@ -13,9 +13,15 @@ Host halimede-nas
 	HostName 192.168.1.185
 	Port 9274
 	User admin
+
 Host dan-plex
 	HostName d11r0.bysh.me
 	User tetsuharu
 
+Host planet-express_int
+	HostName 192.168.1.127
+	User patrick
+
 Host planet-express_ext
-	HostName 192.168.1.
+	HostName swedishhat.ddns.net
+	User patrick
