updating my things

--- a/home/.ssh/config
+++ b/home/.ssh/config
@@ -1,18 +1,8 @@
-Host phoebe
-    HostName 192.168.1.151
-    Port 3825
-    User patrick
-
 Host hashbang
   HostName sf1.hashbang.sh
   IdentitiesOnly yes
   User swedishhat
   IdentityFile /home/patrick/.ssh/id_rsa
-
-Host halimede-nas
-	HostName 192.168.1.185
-	Port 9274
-	User admin
 
 Host dan-plex
 	HostName d11r0.bysh.me
@@ -23,5 +13,11 @@ Host planet-express_int
 	User patrick
 
 Host planet-express_ext
-	HostName swedishhat.ddns.net
+	HostName planet-express.swedishhat.io
+	Port 7631
 	User patrick
+
+Host tacocat-router
+    Hostname 10.0.0.1
+    Port 3951
+    User admin
