--- a/home/.config/sway/config
+++ b/home/.config/sway/config
@@ -14,10 +14,23 @@ set $down j
 set $up k
 set $right l
 # Your preferred terminal emulator
-set $term urxvt
+set $term termite
 # Your preferred application launcher
 # Note: it's recommended that you pass the final command to sway
 set $menu dmenu_path | dmenu | xargs swaymsg exec
+
+hide_edge_borders smart
+for_window [class="^.*"] border pixel 1
+gaps inner 10
+gaps outer 0
+
+# Font for window titles. Will also be used by the bar unless a different font
+#font pango:monospace 16
+ 
+# This font is widely installed, provides lots of unicode glyphs, right-to-left
+# text rendering and scalability on retina/hidpi displays (thanks to pango). 
+font pango:DejaVu Sans Mono 12
+
 
 ### Output configuration
 #
@@ -26,7 +39,7 @@ set $menu dmenu_path | dmenu | xargs swaymsg exec
 output * bg ~/pic/wp/earth-above-space.jpg fill
 
 output eDP-1 resolution 2560x1440 position 0,0
-output eDP-1 scale 2
+output eDP-1 scale 1.2
 #
 # Example configuration:
 #
@@ -39,8 +52,8 @@ output eDP-1 scale 2
 # Example configuration:
 #
 exec swayidle -w \
-     timeout 300 'swaylock -f -c 000000' \
-     timeout 600 'swaymsg "output * dpms off"' \
+     timeout 900 'swaylock -f -c 000000' \
+     timeout 1200 'swaymsg "output * dpms off"' \
           resume 'swaymsg "output * dpms on"' \
     before-sleep 'swaylock -f -c 000000'
 #
@@ -51,7 +64,12 @@ exec swayidle -w \
 ### Input configuration
 #
 # Example configuration:
-#
+#input "6058:20564:ThinkPad_Extra_Buttons" {
+#    xkb_layout us
+#    xkb_options caps:super
+#    #xkb_options caps:escape
+#}
+
 input "2:7:SynPS/2_Synaptics_TouchPad" {
     dwt enabled
     tap enabled
@@ -213,11 +231,11 @@ bar {
     #status_command while date +'%Y-%m-%d %l:%M:%S %p'; do sleep 1; done
     status_command i3status
 
-    colors {
-        statusline #ffffff
-        background #323232
-        inactive_workspace #32323200 #32323200 #5c5c5c
-    }
+    #colors {
+        #statusline #ffffff
+        #background #323232
+        #inactive_workspace #32323200 #32323200 #5c5c5c
+    #}
 }
 
 include /etc/sway/config.d/*
